# django-server-timing

./: .travis.yml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASING.md  pyproject.toml  pytest.ini  requirements.dev.txt  setup.py
.github/workflows/: ci.yml
example/: db.sqlite3  manage.py  requirements.txt
example/example/: settings.py  urls.py
example/home/: views.py
scripts/: bump_version.py
server_timing/: __init__.py  middleware.py  silk.py
tests/: conftest.py  settings.py  test_integration.py  test_unit.py  urls.py
