[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-server-timing"
dynamic = ["version"]
description = "Django middleware that integrates Server-Timing header"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Vlad Temian", email = "vladtemian@gmail.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "http://github.com/vtemian/django-server-timing"
Repository = "http://github.com/vtemian/django-server-timing"

[project.optional-dependencies]
dev = [
    "Django>=4.2",
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.8.0",
    "pip-audit>=2.6.0",
    "ruff>=0.8.0",
]
silk = [
    "django-silk>=5.4.0",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.2.0"


[tool.hatch.build.targets.wheel]
packages = ["server_timing"]


[tool.coverage.run]
source = ["server_timing"]
omit = [
    "*/tests/*",
    "*/example/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py310"
line-length = 88
extend-exclude = [
    "migrations",
    ".venv",
    "dist",
    "build",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "DJ",  # flake8-django
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["server_timing"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

